# ai4h-eval-lab

./: .env.example  .gitignore  LICENSE  README.md  SECURITY.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: check.yml  release.yml
docs/: ARCHITECTURE.md  RESULT_SUBMISSIONS.md
src/: App.tsx  styles.css  types.ts
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/data/: bundledCatalog.ts
src/services/: catalog.ts  diagnostics.test.ts  diagnostics.ts  evaluators.test.ts  evaluators.ts  http.ts  providers.test.ts  providers.ts  reviews.test.ts  reviews.ts  runner.ts  storage.ts  submissions.test.ts  submissions.ts  updates.test.ts  updates.ts
