[package]
name = "ai4h-eval-lab"
version = "0.6.0"
description = "Open model safety evaluation for the public interest"
authors = ["Safe AI for Humanity Foundation"]
license = "Apache-2.0"
repository = "https://github.com/SafeAI4Humanity/ai4h-eval-lab"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "ai4h_eval_lab_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tauri-plugin-http = { version = "2", features = ["unsafe-headers"] }
tauri-plugin-opener = "2"

[target.'cfg(any(target_os = "macos", target_os = "ios"))'.dependencies]
keyring = { version = "3.6", default-features = false, features = ["apple-native"] }

[target.'cfg(target_os = "linux")'.dependencies]
keyring = { version = "3.6", default-features = false, features = ["linux-native-sync-persistent"] }
